Treat `templates/` as a submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "s5"]
 	path = s5
 	url = https://github.com/CodeGnome/s5
+[submodule "templates"]
+	path = templates
+	url = https://github.com/doronbehar/pandoc-templates
